Add feature to display all letters that have never been used